versions/v2.14/modules/en/pages/observability/monitoring-and-dashboards/promql-expressions.adoc
= PromQL Expression Reference
ifeval::["{build-type}" != "srfa"]
:page-languages: [en, zh]
endif::[]
:revdate: 2025-08-05
:page-revdate: {revdate}
:community-path: integrations-in-rancher/monitoring-and-alerting/promql-expressions.adoc 
:product-path: observability/monitoring-and-dashboards/promql-expressions.adoc

The PromQL expressions in this doc can be used to configure alerts.

For more information about querying the Prometheus time series database, refer to the official https://prometheus.io/docs/prometheus/latest/querying/basics/[Prometheus documentation.]

[#_cluster_metrics]
== Cluster Metrics

[#_cluster_cpu_utilization]
=== Cluster CPU Utilization

|===
| Catalog | Expression

| Detail
| `1 - (avg(irate(node_cpu_seconds_total{mode="idle"}[5m])) by (instance))`

| Summary
| `1 - (avg(irate(node_cpu_seconds_total{mode="idle"}[5m])))`
|===

[#_cluster_load_average]
=== Cluster Load Average

|===
| Catalog | Expression

| Detail
| <table><tr><td>load1</td><td>``sum(node_load1) by (instance) / count(node_cpu_seconds_total{mode="system"}) by (instance)``</td></tr><tr><td>load5</td><td>``sum(node_load5) by (instance) / count(node_cpu_seconds_total{mode="system"}) by (instance)``</td></tr><tr><td>load15</td><td>``sum(node_load15) by (instance) / count(node_cpu_seconds_total{mode="system"}) by (instance)``</td></tr></table>

| Summary
| <table><tr><td>load1</td><td>``sum(node_load1) by (instance) / count(node_cpu_seconds_total{mode="system"})``</td></tr><tr><td>load5</td><td>``sum(node_load5) by (instance) / count(node_cpu_seconds_total{mode="system"})``</td></tr><tr><td>load15</td><td>``sum(node_load15) by (instance) / count(node_cpu_seconds_total{mode="system"})``</td></tr></table>
|===

[#_cluster_memory_utilization]
=== Cluster Memory Utilization

|===
| Catalog | Expression

| Detail
| `1 - sum(node_memory_MemAvailable_bytes) by (instance) / sum(node_memory_MemTotal_bytes) by (instance)`

| Summary
| `1 - sum(node_memory_MemAvailable_bytes) / sum(node_memory_MemTotal_bytes)`
|===

[#_cluster_disk_utilization]
=== Cluster Disk Utilization

|===
| Catalog | Expression

| Detail
| `(sum(node_filesystem_size_bytes{device!="rootfs"}) by (instance) - sum(node_filesystem_free_bytes{device!="rootfs"}) by (instance)) / sum(node_filesystem_size_bytes{device!="rootfs"}) by (instance)`

| Summary
| `(sum(node_filesystem_size_bytes{device!="rootfs"}) - sum(node_filesystem_free_bytes{device!="rootfs"})) / sum(node_filesystem_size_bytes{device!="rootfs"})`
|===

[#_cluster_disk_i_o]
=== Cluster Disk I/O

|===
| Catalog | Expression

| Detail
| <table><tr><td>read</td><td>``sum(rate(node_disk_read_bytes_total[5m])) by (instance)``</td></tr><tr><td>written</td><td>``sum(rate(node_disk_written_bytes_total[5m])) by (instance)``</td></tr></table>

| Summary
| <table><tr><td>read</td><td>``sum(rate(node_disk_read_bytes_total[5m]))``</td></tr><tr><td>written</td><td>``sum(rate(node_disk_written_bytes_total[5m]))``</td></tr></table>
|===

[#_cluster_network_packets]
=== Cluster Network Packets

|===
| Catalog | Expression

| Detail
| <table><tr><td>receive-dropped</td><td>``+sum(rate(node_network_receive_drop_total{device!~"lo \| veth.&ast; \| docker.&ast; \| flannel.&ast; \| cali.&ast; \| cbr.&ast;"}[5m])) by (instance)+``</td></tr><tr><td>receive-errs</td><td>``+sum(rate(node_network_receive_errs_total{device!~"lo \| veth.&ast; \| docker.&ast; \| flannel.&ast; \| cali.&ast; \| cbr.&ast;"}[5m])) by (instance)+``</td></tr><tr><td>receive-packets</td><td>``+sum(rate(node_network_receive_packets_total{device!~"lo \| veth.&ast; \| docker.&ast; \| flannel.&ast; \| cali.&ast; \| cbr.&ast;"}[5m])) by (instance)+``</td></tr><tr><td>transmit-dropped</td><td>``+sum(rate(node_network_transmit_drop_total{device!~"lo \| veth.&ast; \| docker.&ast; \| flannel.&ast; \| cali.&ast; \| cbr.&ast;"}[5m])) by (instance)+``</td></tr><tr><td>transmit-errs</td><td>``+sum(rate(node_network_transmit_errs_total{device!~"lo \| veth.&ast; \| docker.&ast; \| flannel.&ast; \| cali.&ast; \| cbr.&ast;"}[5m])) by (instance)+``</td></tr><tr><td>transmit-packets</td><td>``+sum(rate(node_network_transmit_packets_total{device!~"lo \| veth.&ast; \| docker.&ast; \| flannel.&ast; \| cali.&ast; \| cbr.&ast;"}[5m])) by (instance)+``</td></tr></table>

| Summary
| <table><tr><td>receive-dropped</td><td>``+sum(rate(node_network_receive_drop_total{device!~"lo \| veth.&ast; \| docker.&ast; \| flannel.&ast; \| cali.&ast; \| cbr.&ast;"}[5m]))+``</td></tr><tr><td>receive-errs</td><td>``+sum(rate(node_network_receive_errs_total{device!~"lo \| veth.&ast; \| docker.&ast; \| flannel.&ast; \| cali.&ast; \| cbr.&ast;"}[5m]))+``</td></tr><tr><td>receive-packets</td><td>``+sum(rate(node_network_receive_packets_total{device!~"lo \| veth.&ast; \| docker.&ast; \| flannel.&ast; \| cali.&ast; \| cbr.&ast;"}[5m]))+``</td></tr><tr><td>transmit-dropped</td><td>``+sum(rate(node_network_transmit_drop_total{device!~"lo \| veth.&ast; \| docker.&ast; \| flannel.&ast; \| cali.&ast; \| cbr.&ast;"}[5m]))+``</td></tr><tr><td>transmit-errs</td><td>``+sum(rate(node_network_transmit_errs_total{device!~"lo \| veth.&ast; \| docker.&ast; \| flannel.&ast; \| cali.&ast; \| cbr.&ast;"}[5m]))+``</td></tr><tr><td>transmit-packets</td><td>``+sum(rate(node_network_transmit_packets_total{device!~"lo \| veth.&ast; \| docker.&ast; \| flannel.&ast; \| cali.&ast; \| cbr.&ast;"}[5m]))+``</td></tr></table>
|===

[#_cluster_network_i_o]
=== Cluster Network I/O

|===
| Catalog | Expression

| Detail
| <table><tr><td>receive</td><td>``+sum(rate(node_network_receive_bytes_total{device!~"lo \| veth.&ast; \| docker.&ast; \| flannel.&ast; \| cali.&ast; \| cbr.&ast;"}[5m])) by (instance)+``</td></tr><tr><td>transmit</td><td>``+sum(rate(node_network_transmit_bytes_total{device!~"lo \| veth.&ast; \| docker.&ast; \| flannel.&ast; \| cali.&ast; \| cbr.&ast;"}[5m])) by (instance)+``</td></tr></table>

| Summary
| <table><tr><td>receive</td><td>``+sum(rate(node_network_receive_bytes_total{device!~"lo \| veth.&ast; \| docker.&ast; \| flannel.&ast; \| cali.&ast; \| cbr.&ast;"}[5m]))+``</td></tr><tr><td>transmit</td><td>``+sum(rate(node_network_transmit_bytes_total{device!~"lo \| veth.&ast; \| docker.&ast; \| flannel.&ast; \| cali.&ast; \| cbr.&ast;"}[5m]))+``</td></tr></table>
|===

[#_node_metrics]
== Node Metrics

[#_node_cpu_utilization]
=== Node CPU Utilization

|===
| Catalog | Expression

| Detail
| `avg(irate(node_cpu_seconds_total{mode!="idle", instance=~"$instance"}[5m])) by (mode)`

| Summary
| `1 - (avg(irate(node_cpu_seconds_total{mode="idle", instance=~"$instance"}[5m])))`
|===

[#_node_load_average]
=== Node Load Average

|===
| Catalog | Expression

| Detail
| <table><tr><td>load1</td><td>``sum(node_load1{instance=~"$instance"}) / count(node_cpu_seconds_total{mode="system",instance=~"$instance"})``</td></tr><tr><td>load5</td><td>``sum(node_load5{instance=~"$instance"}) / count(node_cpu_seconds_total{mode="system",instance=~"$instance"})``</td></tr><tr><td>load15</td><td>``sum(node_load15{instance=~"$instance"}) / count(node_cpu_seconds_total{mode="system",instance=~"$instance"})``</td></tr></table>

| Summary
| <table><tr><td>load1</td><td>``sum(node_load1{instance=~"$instance"}) / count(node_cpu_seconds_total{mode="system",instance=~"$instance"})``</td></tr><tr><td>load5</td><td>``sum(node_load5{instance=~"$instance"}) / count(node_cpu_seconds_total{mode="system",instance=~"$instance"})``</td></tr><tr><td>load15</td><td>``sum(node_load15{instance=~"$instance"}) / count(node_cpu_seconds_total{mode="system",instance=~"$instance"})``</td></tr></table>
|===

[#_node_memory_utilization]
=== Node Memory Utilization

|===
| Catalog | Expression

| Detail
| `1 - sum(node_memory_MemAvailable_bytes{instance=~"$instance"}) / sum(node_memory_MemTotal_bytes{instance=~"$instance"})`

| Summary
| `1 - sum(node_memory_MemAvailable_bytes{instance=~"$instance"}) / sum(node_memory_MemTotal_bytes{instance=~"$instance"}) `
|===

[#_node_disk_utilization]
=== Node Disk Utilization

|===
| Catalog | Expression

| Detail
| `(sum(node_filesystem_size_bytes{device!="rootfs",instance=~"$instance"}) by (device) - sum(node_filesystem_free_bytes{device!="rootfs",instance=~"$instance"}) by (device)) / sum(node_filesystem_size_bytes{device!="rootfs",instance=~"$instance"}) by (device)`

| Summary
| `(sum(node_filesystem_size_bytes{device!="rootfs",instance=~"$instance"}) - sum(node_filesystem_free_bytes{device!="rootfs",instance=~"$instance"})) / sum(node_filesystem_size_bytes{device!="rootfs",instance=~"$instance"})`
|===

[#_node_disk_i_o]
=== Node Disk I/O

|===
| Catalog | Expression

| Detail
| <table><tr><td>read</td><td>``sum(rate(node_disk_read_bytes_total{instance=~"$instance"}[5m]))``</td></tr><tr><td>written</td><td>``sum(rate(node_disk_written_bytes_total{instance=~"$instance"}[5m]))``</td></tr></table>

| Summary
| <table><tr><td>read</td><td>``sum(rate(node_disk_read_bytes_total{instance=~"$instance"}[5m]))``</td></tr><tr><td>written</td><td>``sum(rate(node_disk_written_bytes_total{instance=~"$instance"}[5m]))``</td></tr></table>
|===

[#_node_network_packets]
=== Node Network Packets

|===
| Catalog | Expression

| Detail
| <table><tr><td>receive-dropped</td><td>``+sum(rate(node_network_receive_drop_total{device!~"lo \| veth.&ast; \| docker.&ast; \| flannel.&ast; \| cali.&ast; \| cbr.&ast;",instance=~"$instance"}[5m])) by (device)+``</td></tr><tr><td>receive-errs</td><td>``+sum(rate(node_network_receive_errs_total{device!~"lo \| veth.&ast; \| docker.&ast; \| flannel.&ast; \| cali.&ast; \| cbr.&ast;",instance=~"$instance"}[5m])) by (device)+``</td></tr><tr><td>receive-packets</td><td>``+sum(rate(node_network_receive_packets_total{device!~"lo \| veth.&ast; \| docker.&ast; \| flannel.&ast; \| cali.&ast; \| cbr.&ast;",instance=~"$instance"}[5m])) by (device)+``</td></tr><tr><td>transmit-dropped</td><td>``+sum(rate(node_network_transmit_drop_total{device!~"lo \| veth.&ast; \| docker.&ast; \| flannel.&ast; \| cali.&ast; \| cbr.&ast;",instance=~"$instance"}[5m])) by (device)+``</td></tr><tr><td>transmit-errs</td><td>``+sum(rate(node_network_transmit_errs_total{device!~"lo \| veth.&ast; \| docker.&ast; \| flannel.&ast; \| cali.&ast; \| cbr.&ast;",instance=~"$instance"}[5m])) by (device)+``</td></tr><tr><td>transmit-packets</td><td>``+sum(rate(node_network_transmit_packets_total{device!~"lo \| veth.&ast; \| docker.&ast; \| flannel.&ast; \| cali.&ast; \| cbr.&ast;",instance=~"$instance"}[5m])) by (device)+``</td></tr></table>

| Summary
| <table><tr><td>receive-dropped</td><td>``+sum(rate(node_network_receive_drop_total{device!~"lo \| veth.&ast; \| docker.&ast; \| flannel.&ast; \| cali.&ast; \| cbr.&ast;",instance=~"$instance"}[5m]))+``</td></tr><tr><td>receive-errs</td><td>``+sum(rate(node_network_receive_errs_total{device!~"lo \| veth.&ast; \| docker.&ast; \| flannel.&ast; \| cali.&ast; \| cbr.&ast;",instance=~"$instance"}[5m]))+``</td></tr><tr><td>receive-packets</td><td>``+sum(rate(node_network_receive_packets_total{device!~"lo \| veth.&ast; \| docker.&ast; \| flannel.&ast; \| cali.&ast; \| cbr.&ast;",instance=~"$instance"}[5m]))+``</td></tr><tr><td>transmit-dropped</td><td>``+sum(rate(node_network_transmit_drop_total{device!~"lo \| veth.&ast; \| docker.&ast; \| flannel.&ast; \| cali.&ast; \| cbr.&ast;",instance=~"$instance"}[5m]))+``</td></tr><tr><td>transmit-errs</td><td>``+sum(rate(node_network_transmit_errs_total{device!~"lo \| veth.&ast; \| docker.&ast; \| flannel.&ast; \| cali.&ast; \| cbr.&ast;",instance=~"$instance"}[5m]))+``</td></tr><tr><td>transmit-packets</td><td>``+sum(rate(node_network_transmit_packets_total{device!~"lo \| veth.&ast; \| docker.&ast; \| flannel.&ast; \| cali.&ast; \| cbr.&ast;",instance=~"$instance"}[5m]))+``</td></tr></table>
|===

[#_node_network_i_o]
=== Node Network I/O

|===
| Catalog | Expression

| Detail
| <table><tr><td>receive</td><td>``+sum(rate(node_network_receive_bytes_total{device!~"lo \| veth.&ast; \| docker.&ast; \| flannel.&ast; \| cali.&ast; \| cbr.&ast;",instance=~"$instance"}[5m])) by (device)+``</td></tr><tr><td>transmit</td><td>``+sum(rate(node_network_transmit_bytes_total{device!~"lo \| veth.&ast; \| docker.&ast; \| flannel.&ast; \| cali.&ast; \| cbr.&ast;",instance=~"$instance"}[5m])) by (device)+``</td></tr></table>

| Summary
| <table><tr><td>receive</td><td>``+sum(rate(node_network_receive_bytes_total{device!~"lo \| veth.&ast; \| docker.&ast; \| flannel.&ast; \| cali.&ast; \| cbr.&ast;",instance=~"$instance"}[5m]))+``</td></tr><tr><td>transmit</td><td>``+sum(rate(node_network_transmit_bytes_total{device!~"lo \| veth.&ast; \| docker.&ast; \| flannel.&ast; \| cali.&ast; \| cbr.&ast;",instance=~"$instance"}[5m]))+``</td></tr></table>
|===

[#_etcd_metrics]
== Etcd Metrics

[#_etcd_has_a_leader]
=== Etcd Has a Leader

`max(etcd_server_has_leader)`

[#_number_of_times_the_leader_changes]
=== Number of Times the Leader Changes

`max(etcd_server_leader_changes_seen_total)`

[#_number_of_failed_proposals]
=== Number of Failed Proposals

`sum(etcd_server_proposals_failed_total)`

[#_grpc_client_traffic]
=== GRPC Client Traffic

|===
| Catalog | Expression

| Detail
| <table><tr><td>in</td><td>``sum(rate(etcd_network_client_grpc_received_bytes_total[5m])) by (instance)``</td></tr><tr><td>out</td><td>``sum(rate(etcd_network_client_grpc_sent_bytes_total[5m])) by (instance)``</td></tr></table>

| Summary
| <table><tr><td>in</td><td>``sum(rate(etcd_network_client_grpc_received_bytes_total[5m]))``</td></tr><tr><td>out</td><td>``sum(rate(etcd_network_client_grpc_sent_bytes_total[5m]))``</td></tr></table>
|===

[#_peer_traffic]
=== Peer Traffic

|===
| Catalog | Expression

| Detail
| <table><tr><td>in</td><td>``sum(rate(etcd_network_peer_received_bytes_total[5m])) by (instance)``</td></tr><tr><td>out</td><td>``sum(rate(etcd_network_peer_sent_bytes_total[5m])) by (instance)``</td></tr></table>

| Summary
| <table><tr><td>in</td><td>``sum(rate(etcd_network_peer_received_bytes_total[5m]))``</td></tr><tr><td>out</td><td>``sum(rate(etcd_network_peer_sent_bytes_total[5m]))``</td></tr></table>
|===

[#_db_size]
=== DB Size

|===
| Catalog | Expression

| Detail
| `sum(etcd_debugging_mvcc_db_total_size_in_bytes) by (instance)`

| Summary
| `sum(etcd_debugging_mvcc_db_total_size_in_bytes)`
|===

[#_active_streams]
=== Active Streams

|===
| Catalog | Expression

| Detail
| <table><tr><td>lease-watch</td><td>``sum(grpc_server_started_total{grpc_service="etcdserverpb.Lease",grpc_type="bidi_stream"}) by (instance) - sum(grpc_server_handled_total{grpc_service="etcdserverpb.Lease",grpc_type="bidi_stream"}) by (instance)``</td></tr><tr><td>watch</td><td>``sum(grpc_server_started_total{grpc_service="etcdserverpb.Watch",grpc_type="bidi_stream"}) by (instance) - sum(grpc_server_handled_total{grpc_service="etcdserverpb.Watch",grpc_type="bidi_stream"}) by (instance)``</td></tr></table>

| Summary
| <table><tr><td>lease-watch</td><td>``sum(grpc_server_started_total{grpc_service="etcdserverpb.Lease",grpc_type="bidi_stream"}) - sum(grpc_server_handled_total{grpc_service="etcdserverpb.Lease",grpc_type="bidi_stream"})``</td></tr><tr><td>watch</td><td>``sum(grpc_server_started_total{grpc_service="etcdserverpb.Watch",grpc_type="bidi_stream"}) - sum(grpc_server_handled_total{grpc_service="etcdserverpb.Watch",grpc_type="bidi_stream"})``</td></tr></table>
|===

[#_raft_proposals]
=== Raft Proposals

|===
| Catalog | Expression

| Detail
| <table><tr><td>applied</td><td>``sum(increase(etcd_server_proposals_applied_total[5m])) by (instance)``</td></tr><tr><td>committed</td><td>``sum(increase(etcd_server_proposals_committed_total[5m])) by (instance)``</td></tr><tr><td>pending</td><td>``sum(increase(etcd_server_proposals_pending[5m])) by (instance)``</td></tr><tr><td>failed</td><td>``sum(increase(etcd_server_proposals_failed_total[5m])) by (instance)``</td></tr></table>

| Summary
| <table><tr><td>applied</td><td>``sum(increase(etcd_server_proposals_applied_total[5m]))``</td></tr><tr><td>committed</td><td>``sum(increase(etcd_server_proposals_committed_total[5m]))``</td></tr><tr><td>pending</td><td>``sum(increase(etcd_server_proposals_pending[5m]))``</td></tr><tr><td>failed</td><td>``sum(increase(etcd_server_proposals_failed_total[5m]))``</td></tr></table>
|===

[#_rpc_rate]
=== RPC Rate

|===
| Catalog | Expression

| Detail
| <table><tr><td>total</td><td>``sum(rate(grpc_server_started_total{grpc_type="unary"}[5m])) by (instance)``</td></tr><tr><td>fail</td><td>``sum(rate(grpc_server_handled_total{grpc_type="unary",grpc_code!="OK"}[5m])) by (instance)``</td></tr></table>

| Summary
| <table><tr><td>total</td><td>``sum(rate(grpc_server_started_total{grpc_type="unary"}[5m]))``</td></tr><tr><td>fail</td><td>``sum(rate(grpc_server_handled_total{grpc_type="unary",grpc_code!="OK"}[5m]))``</td></tr></table>
|===

[#_disk_operations]
=== Disk Operations

|===
| Catalog | Expression

| Detail
| <table><tr><td>commit-called-by-backend</td><td>``sum(rate(etcd_disk_backend_commit_duration_seconds_sum[1m])) by (instance)``</td></tr><tr><td>fsync-called-by-wal</td><td>``sum(rate(etcd_disk_wal_fsync_duration_seconds_sum[1m])) by (instance)``</td></tr></table>

| Summary
| <table><tr><td>commit-called-by-backend</td><td>``sum(rate(etcd_disk_backend_commit_duration_seconds_sum[1m]))``</td></tr><tr><td>fsync-called-by-wal</td><td>``sum(rate(etcd_disk_wal_fsync_duration_seconds_sum[1m]))``</td></tr></table>
|===

[#_disk_sync_duration]
=== Disk Sync Duration

|===
| Catalog | Expression

| Detail
| <table><tr><td>wal</td><td>``histogram_quantile(0.99, sum(rate(etcd_disk_wal_fsync_duration_seconds_bucket[5m])) by (instance, le))``</td></tr><tr><td>db</td><td>``histogram_quantile(0.99, sum(rate(etcd_disk_backend_commit_duration_seconds_bucket[5m])) by (instance, le))``</td></tr></table>

| Summary
| <table><tr><td>wal</td><td>``sum(histogram_quantile(0.99, sum(rate(etcd_disk_wal_fsync_duration_seconds_bucket[5m])) by (instance, le)))``</td></tr><tr><td>db</td><td>``sum(histogram_quantile(0.99, sum(rate(etcd_disk_backend_commit_duration_seconds_bucket[5m])) by (instance, le)))``</td></tr></table>
|===

[#_kubernetes_components_metrics]
== Kubernetes Components Metrics

[#_api_server_request_latency]
=== API Server Request Latency

|===
| Catalog | Expression

| Detail
| `avg(apiserver_request_latencies_sum / apiserver_request_latencies_count) by (instance, verb) /1e+06`

| Summary
| `avg(apiserver_request_latencies_sum / apiserver_request_latencies_count) by (instance) /1e+06`
|===

[#_api_server_request_rate]
=== API Server Request Rate

|===
| Catalog | Expression

| Detail
| `sum(rate(apiserver_request_count[5m])) by (instance, code)`

| Summary
| `sum(rate(apiserver_request_count[5m])) by (instance)`
|===

[#_scheduling_failed_pods]
=== Scheduling Failed Pods

|===
| Catalog | Expression

| Detail
| `sum(kube_pod_status_scheduled{condition="false"})`

| Summary
| `sum(kube_pod_status_scheduled{condition="false"})`
|===

[#_controller_manager_queue_depth]
=== Controller Manager Queue Depth

|===
| Catalog | Expression

| Detail
| <table><tr><td>volumes</td><td>``sum(volumes_depth) by instance``</td></tr><tr><td>deployment</td><td>``sum(deployment_depth) by instance``</td></tr><tr><td>replicaset</td><td>``sum(replicaset_depth) by instance``</td></tr><tr><td>service</td><td>``sum(service_depth) by instance``</td></tr><tr><td>serviceaccount</td><td>``sum(serviceaccount_depth) by instance``</td></tr><tr><td>endpoint</td><td>``sum(endpoint_depth) by instance``</td></tr><tr><td>daemonset</td><td>``sum(daemonset_depth) by instance``</td></tr><tr><td>statefulset</td><td>``sum(statefulset_depth) by instance``</td></tr><tr><td>replicationmanager</td><td>``sum(replicationmanager_depth) by instance``</td></tr></table>

| Summary
| <table><tr><td>volumes</td><td>``sum(volumes_depth)``</td></tr><tr><td>deployment</td><td>``sum(deployment_depth)``</td></tr><tr><td>replicaset</td><td>``sum(replicaset_depth)``</td></tr><tr><td>service</td><td>``sum(service_depth)``</td></tr><tr><td>serviceaccount</td><td>``sum(serviceaccount_depth)``</td></tr><tr><td>endpoint</td><td>``sum(endpoint_depth)``</td></tr><tr><td>daemonset</td><td>``sum(daemonset_depth)``</td></tr><tr><td>statefulset</td><td>``sum(statefulset_depth)``</td></tr><tr><td>replicationmanager</td><td>``sum(replicationmanager_depth)``</td></tr></table>
|===

[#_scheduler_e2e_scheduling_latency]
=== Scheduler E2E Scheduling Latency

|===
| Catalog | Expression

| Detail
| `histogram_quantile(0.99, sum(scheduler_e2e_scheduling_latency_microseconds_bucket) by (le, instance)) / 1e+06`

| Summary
| `sum(histogram_quantile(0.99, sum(scheduler_e2e_scheduling_latency_microseconds_bucket) by (le, instance)) / 1e+06)`
|===

[#_scheduler_preemption_attempts]
=== Scheduler Preemption Attempts

|===
| Catalog | Expression

| Detail
| `sum(rate(scheduler_total_preemption_attempts[5m])) by (instance)`

| Summary
| `sum(rate(scheduler_total_preemption_attempts[5m]))`
|===

[#_ingress_controller_connections]
=== Ingress Controller Connections

|===
| Catalog | Expression

| Detail
| <table><tr><td>reading</td><td>``sum(nginx_ingress_controller_nginx_process_connections{state="reading"}) by (instance)``</td></tr><tr><td>waiting</td><td>``sum(nginx_ingress_controller_nginx_process_connections{state="waiting"}) by (instance)``</td></tr><tr><td>writing</td><td>``sum(nginx_ingress_controller_nginx_process_connections{state="writing"}) by (instance)``</td></tr><tr><td>accepted</td><td>``sum(ceil(increase(nginx_ingress_controller_nginx_process_connections_total{state="accepted"}[5m]))) by (instance)``</td></tr><tr><td>active</td><td>``sum(ceil(increase(nginx_ingress_controller_nginx_process_connections_total{state="active"}[5m]))) by (instance)``</td></tr><tr><td>handled</td><td>``sum(ceil(increase(nginx_ingress_controller_nginx_process_connections_total{state="handled"}[5m]))) by (instance)``</td></tr></table>

| Summary
| <table><tr><td>reading</td><td>``sum(nginx_ingress_controller_nginx_process_connections{state="reading"})``</td></tr><tr><td>waiting</td><td>``sum(nginx_ingress_controller_nginx_process_connections{state="waiting"})``</td></tr><tr><td>writing</td><td>``sum(nginx_ingress_controller_nginx_process_connections{state="writing"})``</td></tr><tr><td>accepted</td><td>``sum(ceil(increase(nginx_ingress_controller_nginx_process_connections_total{state="accepted"}[5m])))``</td></tr><tr><td>active</td><td>``sum(ceil(increase(nginx_ingress_controller_nginx_process_connections_total{state="active"}[5m])))``</td></tr><tr><td>handled</td><td>``sum(ceil(increase(nginx_ingress_controller_nginx_process_connections_total{state="handled"}[5m])))``</td></tr></table>
|===

[#_ingress_controller_request_process_time]
=== Ingress Controller Request Process Time

|===
| Catalog | Expression

| Detail
| `topk(10, histogram_quantile(0.95,sum by (le, host, path)(rate(nginx_ingress_controller_request_duration_seconds_bucket{host!="_"}[5m]))))`

| Summary
| `topk(10, histogram_quantile(0.95,sum by (le, host)(rate(nginx_ingress_controller_request_duration_seconds_bucket{host!="_"}[5m]))))`
|===

[#_rancher_logging_metrics]
== Rancher Logging Metrics

[#_fluentd_buffer_queue_rate]
=== Fluentd Buffer Queue Rate

|===
| Catalog | Expression

| Detail
| `sum(rate(fluentd_output_status_buffer_queue_length[5m])) by (instance)`

| Summary
| `sum(rate(fluentd_output_status_buffer_queue_length[5m]))`
|===

[#_fluentd_input_rate]
=== Fluentd Input Rate

|===
| Catalog | Expression

| Detail
| `sum(rate(fluentd_input_status_num_records_total[5m])) by (instance)`

| Summary
| `sum(rate(fluentd_input_status_num_records_total[5m]))`
|===

[#_fluentd_output_errors_rate]
=== Fluentd Output Errors Rate

|===
| Catalog | Expression

| Detail
| `sum(rate(fluentd_output_status_num_errors[5m])) by (type)`

| Summary
| `sum(rate(fluentd_output_status_num_errors[5m]))`
|===

[#_fluentd_output_rate]
=== Fluentd Output Rate

|===
| Catalog | Expression

| Detail
| `sum(rate(fluentd_output_status_num_records_total[5m])) by (instance)`

| Summary
| `sum(rate(fluentd_output_status_num_records_total[5m]))`
|===

[#_workload_metrics]
== Workload Metrics

[#_workload_cpu_utilization]
=== Workload CPU Utilization

|===
| Catalog | Expression

| Detail
| <table><tr><td>cfs throttled seconds</td><td>``sum(rate(container_cpu_cfs_throttled_seconds_total{namespace="$namespace",pod_name=~"$podName",container_name!=""}[5m])) by (pod_name)``</td></tr><tr><td>user seconds</td><td>``sum(rate(container_cpu_user_seconds_total{namespace="$namespace",pod_name=~"$podName",container_name!=""}[5m])) by (pod_name)``</td></tr><tr><td>system seconds</td><td>``sum(rate(container_cpu_system_seconds_total{namespace="$namespace",pod_name=~"$podName",container_name!=""}[5m])) by (pod_name)``</td></tr><tr><td>usage seconds</td><td>``sum(rate(container_cpu_usage_seconds_total{namespace="$namespace",pod_name=~"$podName",container_name!=""}[5m])) by (pod_name)``</td></tr></table>

| Summary
| <table><tr><td>cfs throttled seconds</td><td>``sum(rate(container_cpu_cfs_throttled_seconds_total{namespace="$namespace",pod_name=~"$podName",container_name!=""}[5m]))``</td></tr><tr><td>user seconds</td><td>``sum(rate(container_cpu_user_seconds_total{namespace="$namespace",pod_name=~"$podName",container_name!=""}[5m]))``</td></tr><tr><td>system seconds</td><td>``sum(rate(container_cpu_system_seconds_total{namespace="$namespace",pod_name=~"$podName",container_name!=""}[5m]))``</td></tr><tr><td>usage seconds</td><td>``sum(rate(container_cpu_usage_seconds_total{namespace="$namespace",pod_name=~"$podName",container_name!=""}[5m]))``</td></tr></table>
|===

[#_workload_memory_utilization]
=== Workload Memory Utilization

|===
| Catalog | Expression

| Detail
| `sum(container_memory_working_set_bytes{namespace="$namespace",pod_name=~"$podName", container_name!=""}) by (pod_name)`

| Summary
| `sum(container_memory_working_set_bytes{namespace="$namespace",pod_name=~"$podName", container_name!=""})`
|===

[#_workload_network_packets]
=== Workload Network Packets

|===
| Catalog | Expression

| Detail
| <table><tr><td>receive-packets</td><td>``sum(rate(container_network_receive_packets_total{namespace="$namespace",pod_name=~"$podName",container_name!=""}[5m])) by (pod_name)``</td></tr><tr><td>receive-dropped</td><td>``sum(rate(container_network_receive_packets_dropped_total{namespace="$namespace",pod_name=~"$podName",container_name!=""}[5m])) by (pod_name)``</td></tr><tr><td>receive-errors</td><td>``sum(rate(container_network_receive_errors_total{namespace="$namespace",pod_name=~"$podName",container_name!=""}[5m])) by (pod_name)``</td></tr><tr><td>transmit-packets</td><td>``sum(rate(container_network_transmit_packets_total{namespace="$namespace",pod_name=~"$podName",container_name!=""}[5m])) by (pod_name)``</td></tr><tr><td>transmit-dropped</td><td>``sum(rate(container_network_transmit_packets_dropped_total{namespace="$namespace",pod_name=~"$podName",container_name!=""}[5m])) by (pod_name)``</td></tr><tr><td>transmit-errors</td><td>``sum(rate(container_network_transmit_errors_total{namespace="$namespace",pod_name=~"$podName",container_name!=""}[5m])) by (pod_name)``</td></tr></table>

| Summary
| <table><tr><td>receive-packets</td><td>``sum(rate(container_network_receive_packets_total{namespace="$namespace",pod_name=~"$podName",container_name!=""}[5m]))``</td></tr><tr><td>receive-dropped</td><td>``sum(rate(container_network_receive_packets_dropped_total{namespace="$namespace",pod_name=~"$podName",container_name!=""}[5m]))``</td></tr><tr><td>receive-errors</td><td>``sum(rate(container_network_receive_errors_total{namespace="$namespace",pod_name=~"$podName",container_name!=""}[5m]))``</td></tr><tr><td>transmit-packets</td><td>``sum(rate(container_network_transmit_packets_total{namespace="$namespace",pod_name=~"$podName",container_name!=""}[5m]))``</td></tr><tr><td>transmit-dropped</td><td>``sum(rate(container_network_transmit_packets_dropped_total{namespace="$namespace",pod_name=~"$podName",container_name!=""}[5m]))``</td></tr><tr><td>transmit-errors</td><td>``sum(rate(container_network_transmit_errors_total{namespace="$namespace",pod_name=~"$podName",container_name!=""}[5m]))``</td></tr></table>
|===

[#_workload_network_i_o]
=== Workload Network I/O

|===
| Catalog | Expression

| Detail
| <table><tr><td>receive</td><td>``sum(rate(container_network_receive_bytes_total{namespace="$namespace",pod_name=~"$podName",container_name!=""}[5m])) by (pod_name)``</td></tr><tr><td>transmit</td><td>``sum(rate(container_network_transmit_bytes_total{namespace="$namespace",pod_name=~"$podName",container_name!=""}[5m])) by (pod_name)``</td></tr></table>

| Summary
| <table><tr><td>receive</td><td>``sum(rate(container_network_receive_bytes_total{namespace="$namespace",pod_name=~"$podName",container_name!=""}[5m]))``</td></tr><tr><td>transmit</td><td>``sum(rate(container_network_transmit_bytes_total{namespace="$namespace",pod_name=~"$podName",container_name!=""}[5m]))``</td></tr></table>
|===

[#_workload_disk_i_o]
=== Workload Disk I/O

|===
| Catalog | Expression

| Detail
| <table><tr><td>read</td><td>``sum(rate(container_fs_reads_bytes_total{namespace="$namespace",pod_name=~"$podName",container_name!=""}[5m])) by (pod_name)``</td></tr><tr><td>write</td><td>``sum(rate(container_fs_writes_bytes_total{namespace="$namespace",pod_name=~"$podName",container_name!=""}[5m])) by (pod_name)``</td></tr></table>

| Summary
| <table><tr><td>read</td><td>``sum(rate(container_fs_reads_bytes_total{namespace="$namespace",pod_name=~"$podName",container_name!=""}[5m]))``</td></tr><tr><td>write</td><td>``sum(rate(container_fs_writes_bytes_total{namespace="$namespace",pod_name=~"$podName",container_name!=""}[5m]))``</td></tr></table>
|===

[#_pod_metrics]
== Pod Metrics

[#_pod_cpu_utilization]
=== Pod CPU Utilization

|===
| Catalog | Expression

| Detail
| <table><tr><td>cfs throttled seconds</td><td>``sum(rate(container_cpu_cfs_throttled_seconds_total{container_name!="POD",namespace="$namespace",pod_name="$podName", container_name!=""}[5m])) by (container_name)``</td></tr><tr><td>usage seconds</td><td>``sum(rate(container_cpu_usage_seconds_total{container_name!="POD",namespace="$namespace",pod_name="$podName", container_name!=""}[5m])) by (container_name)``</td></tr><tr><td>system seconds</td><td>``sum(rate(container_cpu_system_seconds_total{container_name!="POD",namespace="$namespace",pod_name="$podName", container_name!=""}[5m])) by (container_name)``</td></tr><tr><td>user seconds</td><td>``sum(rate(container_cpu_user_seconds_total{container_name!="POD",namespace="$namespace",pod_name="$podName", container_name!=""}[5m])) by (container_name)``</td></tr></table>

| Summary
| <table><tr><td>cfs throttled seconds</td><td>``sum(rate(container_cpu_cfs_throttled_seconds_total{container_name!="POD",namespace="$namespace",pod_name="$podName", container_name!=""}[5m]))``</td></tr><tr><td>usage seconds</td><td>``sum(rate(container_cpu_usage_seconds_total{container_name!="POD",namespace="$namespace",pod_name="$podName", container_name!=""}[5m]))``</td></tr><tr><td>system seconds</td><td>``sum(rate(container_cpu_system_seconds_total{container_name!="POD",namespace="$namespace",pod_name="$podName", container_name!=""}[5m]))``</td></tr><tr><td>user seconds</td><td>``sum(rate(container_cpu_user_seconds_total{container_name!="POD",namespace="$namespace",pod_name="$podName", container_name!=""}[5m]))``</td></tr></table>
|===

[#_pod_memory_utilization]
=== Pod Memory Utilization

|===
| Catalog | Expression

| Detail
| `sum(container_memory_working_set_bytes{container_name!="POD",namespace="$namespace",pod_name="$podName",container_name!=""}) by (container_name)`

| Summary
| `sum(container_memory_working_set_bytes{container_name!="POD",namespace="$namespace",pod_name="$podName",container_name!=""})`
|===

[#_pod_network_packets]
=== Pod Network Packets

|===
| Catalog | Expression

| Detail
| <table><tr><td>receive-packets</td><td>``sum(rate(container_network_receive_packets_total{namespace="$namespace",pod_name="$podName",container_name!=""}[5m]))``</td></tr><tr><td>receive-dropped</td><td>``sum(rate(container_network_receive_packets_dropped_total{namespace="$namespace",pod_name="$podName",container_name!=""}[5m]))``</td></tr><tr><td>receive-errors</td><td>``sum(rate(container_network_receive_errors_total{namespace="$namespace",pod_name="$podName",container_name!=""}[5m]))``</td></tr><tr><td>transmit-packets</td><td>``sum(rate(container_network_transmit_packets_total{namespace="$namespace",pod_name="$podName",container_name!=""}[5m]))``</td></tr><tr><td>transmit-dropped</td><td>``sum(rate(container_network_transmit_packets_dropped_total{namespace="$namespace",pod_name="$podName",container_name!=""}[5m]))``</td></tr><tr><td>transmit-errors</td><td>``sum(rate(container_network_transmit_errors_total{namespace="$namespace",pod_name="$podName",container_name!=""}[5m]))``</td></tr></table>

| Summary
| <table><tr><td>receive-packets</td><td>``sum(rate(container_network_receive_packets_total{namespace="$namespace",pod_name="$podName",container_name!=""}[5m]))``</td></tr><tr><td>receive-dropped</td><td>``sum(rate(container_network_receive_packets_dropped_total{namespace="$namespace",pod_name="$podName",container_name!=""}[5m]))``</td></tr><tr><td>receive-errors</td><td>``sum(rate(container_network_receive_errors_total{namespace="$namespace",pod_name="$podName",container_name!=""}[5m]))``</td></tr><tr><td>transmit-packets</td><td>``sum(rate(container_network_transmit_packets_total{namespace="$namespace",pod_name="$podName",container_name!=""}[5m]))``</td></tr><tr><td>transmit-dropped</td><td>``sum(rate(container_network_transmit_packets_dropped_total{namespace="$namespace",pod_name="$podName",container_name!=""}[5m]))``</td></tr><tr><td>transmit-errors</td><td>``sum(rate(container_network_transmit_errors_total{namespace="$namespace",pod_name="$podName",container_name!=""}[5m]))``</td></tr></table>
|===

[#_pod_network_i_o]
=== Pod Network I/O

|===
| Catalog | Expression

| Detail
| <table><tr><td>receive</td><td>``sum(rate(container_network_receive_bytes_total{namespace="$namespace",pod_name="$podName",container_name!=""}[5m]))``</td></tr><tr><td>transmit</td><td>``sum(rate(container_network_transmit_bytes_total{namespace="$namespace",pod_name="$podName",container_name!=""}[5m]))``</td></tr></table>

| Summary
| <table><tr><td>receive</td><td>``sum(rate(container_network_receive_bytes_total{namespace="$namespace",pod_name="$podName",container_name!=""}[5m]))``</td></tr><tr><td>transmit</td><td>``sum(rate(container_network_transmit_bytes_total{namespace="$namespace",pod_name="$podName",container_name!=""}[5m]))``</td></tr></table>
|===

[#_pod_disk_i_o]
=== Pod Disk I/O

|===
| Catalog | Expression

| Detail
| <table><tr><td>read</td><td>``sum(rate(container_fs_reads_bytes_total{namespace="$namespace",pod_name="$podName",container_name!=""}[5m])) by (container_name)``</td></tr><tr><td>write</td><td>``sum(rate(container_fs_writes_bytes_total{namespace="$namespace",pod_name="$podName",container_name!=""}[5m])) by (container_name)``</td></tr></table>

| Summary
| <table><tr><td>read</td><td>``sum(rate(container_fs_reads_bytes_total{namespace="$namespace",pod_name="$podName",container_name!=""}[5m]))``</td></tr><tr><td>write</td><td>``sum(rate(container_fs_writes_bytes_total{namespace="$namespace",pod_name="$podName",container_name!=""}[5m]))``</td></tr></table>
|===

[#_container_metrics]
== Container Metrics

[#_container_cpu_utilization]
=== Container CPU Utilization

|===
| Catalog | Expression

| cfs throttled seconds
| `sum(rate(container_cpu_cfs_throttled_seconds_total{namespace="$namespace",pod_name="$podName",container_name="$containerName"}[5m]))`

| usage seconds
| `sum(rate(container_cpu_usage_seconds_total{namespace="$namespace",pod_name="$podName",container_name="$containerName"}[5m]))`

| system seconds
| `sum(rate(container_cpu_system_seconds_total{namespace="$namespace",pod_name="$podName",container_name="$containerName"}[5m]))`

| user seconds
| `sum(rate(container_cpu_user_seconds_total{namespace="$namespace",pod_name="$podName",container_name="$containerName"}[5m]))`
|===

[#_container_memory_utilization]
=== Container Memory Utilization

`sum(container_memory_working_set_bytes{namespace="$namespace",pod_name="$podName",container_name="$containerName"})`

[#_container_disk_i_o]
=== Container Disk I/O

|===
| Catalog | Expression

| read
| `sum(rate(container_fs_reads_bytes_total{namespace="$namespace",pod_name="$podName",container_name="$containerName"}[5m]))`

| write
| `sum(rate(container_fs_writes_bytes_total{namespace="$namespace",pod_name="$podName",container_name="$containerName"}[5m]))`
|===
